Added Mem to the dashboard and added a historic process memory use analytics pane. Added the memchunks table. Eliminated some unnecessary indentation in the analytics templates.
Added the panel_menu_statistics_memory phrase.
Added the panel_dashboard_memused phrase.
Added the panel_dashboard_memused_desc phrase.
Added the panel_statistics_memory_head phrase.

You will need to run the updater / patcher for this commit.

--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -175,6 +175,7 @@ button, .formbutton, .panel_right_button:not(.has_inner_button), #panel_users .p
 	padding: 16px;
 	padding-bottom: 0px;
 	padding-left: 0px;
+	padding-right: 0px;
 	margin-bottom: 10px;
 }
 .colstack_graph_holder .ct-label {
