Do proper averaging and collect more samples for the memory analytics pane. Added an ETag for the alerts endpoint when you're not logged to save bandwidth. The Page Manager now uses dyntmpl. The Setting Manager now uses dyntmpl. The Word Filter Manager now uses dyntmpl. Fixed the padding on the noavatar alerts for Nox.
Tweaked the panel_word_filters_to phrase.
Tweaked the panel_statistics_memory_head phrase.
Added the panel_statistics_memory_chart_aria phrase.
Added the panel_statistics_memory_table_aria phrase.
Added the panel_statistics_memory_no_memory phrase.

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -74,6 +74,15 @@ li a {
 	padding-left: 8px;
 	padding-right: 8px;
 }
+.alertItem:not(.withAvatar) {
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
+.alertItem:not(.withAvatar) a {
+	padding-top: 14px;
+	padding-bottom: 18px;
+	font-size: 17px;
+}
 .alertItem.withAvatar {
 	background: none !important;
 	height: 66px;
