--- a/templates/panel_analytics_memory.html
+++ b/templates/panel_analytics_memory.html
@@ -13,20 +13,20 @@
 </div>
 <form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/memory/" method="get"></form>
 <div id="panel_analytics_memory" class="colstack_graph_holder">
-	<div class="ct_chart" aria-label="{{lang "panel_statistics_post_counts_chart_aria"}}"></div>
+	<div class="ct_chart" aria-label="{{lang "panel_statistics_memory_chart_aria"}}"></div>
 </div>
 <div class="colstack_item colstack_head">
 	<div class="rowitem">
 		<h1>{{lang "panel_statistics_details_head"}}</h1>
 	</div>
 </div>
-<div id="panel_analytics_posts_table" class="colstack_item rowlist" aria-label="{{lang "panel_statistics_post_counts_table_aria"}}">
+<div id="panel_analytics_posts_table" class="colstack_item rowlist" aria-label="{{lang "panel_statistics_memory_table_aria"}}">
 	{{range .ViewItems}}
 	<div class="rowitem panel_compactrow editable_parent">
-		<a class="panel_upshift {{if or (or (or (eq $.TimeRange "six-hours") (eq $.TimeRange "twelve-hours")) (eq $.TimeRange "one-day")) (eq $.TimeRange "two-days")}}unix_to_24_hour_time{{else}}unix_to_date{{end}}">{{.Time}}</a>
+		<a class="panel_upshift unix_{{if or (or (or (eq $.TimeRange "six-hours") (eq $.TimeRange "twelve-hours")) (eq $.TimeRange "one-day")) (eq $.TimeRange "two-days")}}to_24_hour_time{{else}}to_date{{end}}">{{.Time}}</a>
 		<span class="panel_compacttext to_right">{{.Count}}{{.Unit}}</span>
 	</div>
-	{{else}}<div class="rowitem passive rowmsg">{{lang "panel_statistics_post_counts_no_post_counts"}}</div>{{end}}
+	{{else}}<div class="rowitem passive rowmsg">{{lang "panel_statistics_memory_no_memory"}}</div>{{end}}
 </div>
 <script>
 	let rawLabels = [{{range .Graph.Labels}}
@@ -39,7 +39,7 @@
 	let legendNames = [{{range .Graph.Legends}}
 	{{.}},{{end}}
 	];
-	
+
 	(function(window, document, Chartist) {
   'use strict';
 
