--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -1,10 +1,5 @@
-{{template "header.html" . }}
-<div class="colstack panel_stack">
 {{/** TODO: Set the order based on the order here **/}}
 {{/** TODO: Write the backend code and JS code for saving this menu **/}}
-{{template "panel_menu.html" . }}
-<main class="colstack_right">
-{{template "panel_before_head.html" . }}
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_themes_menus_edit_head"}}</h1></div>
 	</div>
@@ -59,11 +54,9 @@
 				</select></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_themes_menus_edit_update_button"}}</button></div>
+				<div class="formitem">
+					<button name="panel-button" class="formbutton">{{lang "panel_themes_menus_edit_update_button"}}</button>
+				</div>
 			</div>
 		</div>
 	</form>
-</main>
-
-</div>
-{{template "footer.html" . }}
