--- a/templates/panel_themes_menus.html
+++ b/templates/panel_themes_menus.html
@@ -1,8 +1,3 @@
-{{template "header.html" . }}
-<div class="colstack panel_stack">
-{{template "panel_menu.html" . }}
-	<main class="colstack_right">
-{{template "panel_before_head.html" . }}
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_themes_menus_head"}}</h1></div>
 		</div>
@@ -10,10 +5,7 @@
 			{{range .ItemList}}
 			<div class="rowitem panel_compactrow editable_parent">
 				<a href="/panel/themes/menus/edit/{{.ID}}" class="editable_block panel_upshift">{{if .Name}}{{.Name}} - {{end}}#{{.ID}}</a>
-				<a class="panel_compacttext to_right">{{.ItemCount}} items</a>
+				<a class="panel_compacttext to_right">{{.ItemCount}}{{lang "panel_themes_menus_items_suffix"}}</a>
 			</div>
 			{{end}}
 		</div>
-	</main>
-</div>
-{{template "footer.html" . }}
