--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -113,6 +113,9 @@
 	background-color: rgb(68,68,68);
 	padding: 12px;
 }
+.grid_item a {
+	color: rgb(200,200,200);
+}
 .stat_green {
 	background-color: rgb(68,88,68);
 }
@@ -177,6 +180,13 @@ button, .formbutton, .panel_right_button:not(.has_inner_button), #panel_users .p
 	padding-left: 0px;
 	padding-right: 0px;
 	margin-bottom: 10px;
+}
+.colstack_graph_holder.scrolly {
+	overflow-x: scroll;
+	width: 800px;
+}
+.colstack_graph_holder.scrolly .ct_chart {
+	width: 1000px;
 }
 .colstack_graph_holder .ct-label {
 	color: rgb(195,195,195);
