--- a/templates/panel_analytics_memory.html
+++ b/templates/panel_analytics_memory.html
@@ -80,20 +80,24 @@
   };
 
 }(window, document, Chartist));
+	const noPre = ["twelve-hours","one-day","two-days","one-week","one-month"];
+	const preStats = () => {
+		if((!"{{.TimeRange}}" in noPre) && seriesData.length > 0 && seriesData[0].length > 12) {
+			let elem = document.getElementsByClassName("colstack_graph_holder")[0];
+			let w = elem.clientWidth;
+			console.log("w:",w);
+			elem.classList.add("scrolly");
+			console.log("elem.clientWidth:",elem.clientWidth);
+			elem.setAttribute("style","width:"+w+"px;");
+			console.log("elem.clientWidth:",elem.clientWidth);
+		}
+	};
 	addInitHook("after_phrases", () => {
 		addInitHook("end_init", () => {
 			addInitHook("analytics_loaded", () => {
-				if("{{.TimeRange}}" != "one-week" && seriesData.length > 0 && seriesData[0].length > 12) {
-					let elem = document.getElementsByClassName("colstack_graph_holder")[0];
-					let w = elem.clientWidth;
-					console.log("w:",w);
-					elem.classList.add("scrolly");
-					console.log("elem.clientWidth:",elem.clientWidth);
-					elem.setAttribute("style","width:"+w+"px;");
-					console.log("elem.clientWidth:",elem.clientWidth);
-				}
+				preStats();
 				buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}",legendNames,true);
-		});
+			});
 		});
 	});
 </script>
