--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -269,6 +269,13 @@
 	margin-left: 16px;
 	padding-top: 16px;
 }
+.colstack_graph_holder.scrolly {
+	overflow-x: scroll;
+	width: 800px;
+}
+.colstack_graph_holder.scrolly .ct_chart {
+	width: 1000px;
+}
 .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
     stroke: hsl(359,98%,53%) !important;
 }
