Added the active memory analytics pane. More to come here. Added the meta store.
Added the panel_menu_statistics_active_memory phrase.
Added the panel_statistics_active_memory_head phrase.

Added the panel_analytics_time_range_month template.

Added Go 1.12 to the Travis list.

Added the stack and heap columns to the memchunks table.
Added the createdAt column to the activity_stream table.
Added the meta table.

You will need to run the patcher / updater for this commit.

--- a/templates/panel_dashboard.html
+++ b/templates/panel_dashboard.html
@@ -4,7 +4,7 @@
 <div id="panel_dashboard" class="colstack_grid">
 {{range .}}
 	<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color: {{.TextColour}};{{end}}{{if .Background}}background-color: {{.Background}};{{end}}">
-		<span>{{.Body}}</span>
+		{{if .Href}}<a href="{{.Href}}">{{.Body}}</a>{{else}}<span>{{.Body}}</span>{{end}}
 	</div>
 {{end}}
 </div>
