--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -65,6 +65,9 @@
 		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/memory/">{{lang "panel_menu_statistics_memory"}}</a>
 		</div>
+		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/active-memory/">{{lang "panel_menu_statistics_active_memory"}}</a>
+		</div>
 	{{end}}
 	<div class="rowitem passive">
 		<a href="/forum/{{.ReportForumID}}">{{lang "panel_menu_reports"}}</a> <a class="menu_stats" href="#">({{.Stats.Reports}})</a>
