Reduce the amount of data sent for alert resumes in preparation for moving resumes to the WebSockets endpoint. Remove a bit of superfluous information from the avatar alt attributes. Improved upon the meta store tests. Move float: right; out of the footer and into the Tempra Simple and Shadow stylesheets. Added a missing level label to Shadow.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
 		</div>
 		{{if .CurrentUser.IsAdmin}}<div class="elapsed">{{.Header.Elapsed1}} | {{elapsed .Header.StartedAt}}</div>{{end}}
 		<form action="/theme/" method="post">
-			<div id="themeSelector" style="float: right;">
+			<div id="themeSelector">
 				<select id="themeSelectorSelect" name="themeSelector" aria-label="{{lang "footer_theme_selector_aria"}}">
 				{{range .Header.Themes}}
     				{{if not .HideFromThemes}}<option val="{{.Name}}"{{if eq $.Header.Theme.Name .Name}} selected{{end}}>{{.FriendlyName}}</option>{{end}}
