--- a/templates/panel_users.html
+++ b/templates/panel_users.html
@@ -4,7 +4,7 @@
 	<div id="panel_users" class="colstack_item rowlist bgavatars">
 		{{range .ItemList}}
 		<div class="rowitem editable_parent" style="background-image: url('{{.Avatar}}');">
-			<img class="bgsub" src="{{.Avatar}}" alt="{{.Name}}'s Avatar" />
+			<img class="bgsub" src="{{.Avatar}}" alt="Avatar" aria-hidden="true" />
 			<a class="rowTitle editable_block"{{if $.CurrentUser.Perms.EditUser}} href="/panel/users/edit/{{.ID}}?session={{$.CurrentUser.Session}}"{{end}}>{{.Name}}</a>
 			<span class="panel_floater">
 				<a href="{{.Link}}" class="tag-mini profile_url">{{lang "panel_users_profile"}}</a>
