--- a/templates/widget_online.html
+++ b/templates/widget_online.html
@@ -4,7 +4,7 @@
 <div class="rowblock rowlist bgavatars not_grid widget_online">
 	{{if lt .UserCount 30}}
 	{{range .Users}}<div class="rowitem" style="background-image: url('{{.Avatar}}');">
-		<img src="{{.Avatar}}" class="bgsub" alt="{{.Name}}'s Avatar" />
+		<img src="{{.Avatar}}" class="bgsub" alt="Avatar" aria-hidden="true" />
 		<a class="rowTitle" href="{{.Link}}">{{.Name}}</a>
 	</div>
 	{{else}}<div class="rowitem rowmsg">{{lang "widget.online_none_online"}}</div>{{end}}
