--- a/templates/header.html
+++ b/templates/header.html
@@ -26,7 +26,7 @@
 		<link rel="search" type="application/opensearchdescription+xml" title="{{.Header.Site.Name}}" href="/opensearch.xml">
 	</head>
 	<body>
-		{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}{{flush}}
+		{{/**{{if not .CurrentUser.IsSuperMod}}<style>.supermod_only { display: none !important; }</style>{{end}}**/}}{{flush}}
 		<div id="container" class="container">
 		{{/**<!--<div class="navrow">-->**/}}
 			<div class="left_of_nav">{{dock "leftOfNav" .Header }}</div>
@@ -40,7 +40,7 @@
 				</ul>
 				</div>
 				</div>
-				<div style="clear: both;"></div>
+				<div style="clear:both;"></div>
 			</nav>
 			<div class="right_of_nav">{{/**<!--{{dock "rightOfNav" .Header }}-->**/}}
 {{/** TODO: Make this a separate template and load it via the theme docks, here for now so we can rapidly prototype the Nox theme **/}}
