--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -9,7 +9,7 @@
 	<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
 	<div class="grid_item grid_stat"><span>{{.GoVersion}}</span></div>
 	<div class="grid_item grid_stat"><span>{{.DBVersion}}</span></div>
-			
+	
 
 	<div class="grid_item grid_stat grid_stat_head"><span>{{lang "panel_debug_open_database_connections_label"}}</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>{{lang "panel_debug_adapter_label"}}</span></div>
@@ -20,27 +20,73 @@
 	<div class="grid_item grid_stat"><span>{{.DBAdapter}}</span></div>
 	<div class="grid_item grid_stat"><span>?</span></div>
 
+
 	<div class="grid_item grid_stat grid_stat_head"><span>{{lang "panel_debug_goroutine_count_label"}}</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>{{lang "panel_debug_cpu_count_label"}}</span></div>
-	<div class="grid_item grid_stat grid_stat_head"><span>HeapAlloc</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
 
 	<div class="grid_item grid_stat"><span>{{.Goroutines}}</span></div>
 	<div class="grid_item grid_stat"><span>{{.CPUs}}</span></div>
-	<div class="grid_item grid_stat"><span>{{.MemStats.HeapAlloc}}</span></div>
+	<div class="grid_item grid_stat"><span>?</span></div>
+</div>
 
+<div class="colstack_item colstack_head colstack_sub_head">
+	<div class="rowitem"><h2>Memory Statistics</h2></div>
+</div>
+<div id="panel_debug" class="colstack_grid">
+	<div class="grid_item grid_stat grid_stat_head"><span>Sys</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>HeapSys</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>HeapAlloc</span></div>	
+	
+	<div class="grid_item grid_stat"><span>{{.MemStats.Sys}} ({{bunit .MemStats.Sys}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.HeapSys}} ({{bunit .MemStats.HeapSys}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.HeapAlloc}} ({{bunit .MemStats.HeapAlloc}})</span></div>
+	
+
 	<div class="grid_item grid_stat grid_stat_head"><span>HeapIdle</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>HeapObjects</span></div>
-
-	<div class="grid_item grid_stat"><span>{{.MemStats.HeapSys}}</span></div>
-	<div class="grid_item grid_stat"><span>{{.MemStats.HeapIdle}}</span></div>
-	<div class="grid_item grid_stat"><span>{{.MemStats.HeapObjects}}</span></div>
-
-	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
-	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>StackInuse</span></div>
+	
+	<div class="grid_item grid_stat"><span>{{.MemStats.HeapIdle}} ({{bunit .MemStats.HeapIdle}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.HeapObjects}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.StackInuse}} ({{bunit .MemStats.StackInuse}})</span></div>
 
+
+	<div class="grid_item grid_stat grid_stat_head"><span>MSpanInuse</span></div>	
+	<div class="grid_item grid_stat grid_stat_head"><span>MCacheInuse</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>MSpanSys</span></div>
+	
+	<div class="grid_item grid_stat"><span>{{.MemStats.MSpanInuse}} ({{bunit .MemStats.MSpanInuse}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.MCacheInuse}} ({{bunit .MemStats.MCacheInuse}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.MSpanSys}} ({{bunit .MemStats.MSpanSys}})</span></div>
+
+	
+	<div class="grid_item grid_stat grid_stat_head"><span>MCacheSys</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>GCSys</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>OtherSys</span></div>
+
+	<div class="grid_item grid_stat"><span>{{.MemStats.MCacheSys}} ({{bunit .MemStats.MCacheSys}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.GCSys}} ({{bunit .MemStats.GCSys}})</span></div>
+	<div class="grid_item grid_stat"><span>{{.MemStats.OtherSys}} ({{bunit .MemStats.OtherSys}})</span></div>
+</div>
+<div class="colstack_item colstack_head colstack_sub_head">
+	<div class="rowitem"><h2>Caches</h2></div>
+</div>
+<div id="panel_debug" class="colstack_grid">
+	<div class="grid_item grid_stat grid_stat_head"><span>Topic Cache</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>User Cache</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>Reply Cache</span></div>
+
+	<div class="grid_item grid_stat"><span>{{.TCache}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.UCache}}</span></div>
+	<div class="grid_item grid_stat"><span>0</span></div>
+
+
+	<div class="grid_item grid_stat grid_stat_head"><span>Topic List</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
+
+	<div class="grid_item grid_stat"><span>{{if .TopicListThaw}}Thawed{{else}}Sleeping{{end}}</span></div>
 	<div class="grid_item grid_stat"><span>?</span></div>
 	<div class="grid_item grid_stat"><span>?</span></div>
-	<div class="grid_item grid_stat"><span>{{.MemStats.StackInuse}}</span></div>
 </div>
