--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -79,7 +79,7 @@
 
 	<div class="grid_item grid_stat"><span>{{.TCache}}</span></div>
 	<div class="grid_item grid_stat"><span>{{.UCache}}</span></div>
-	<div class="grid_item grid_stat"><span>0</span></div>
+	<div class="grid_item grid_stat"><span>{{.RCache}}</span></div>
 
 
 	<div class="grid_item grid_stat grid_stat_head"><span>Topic List</span></div>
