--- a/templates/panel_analytics_memory.html
+++ b/templates/panel_analytics_memory.html
@@ -21,76 +21,4 @@
 	</div>
 	{{else}}<div class="rowitem passive rowmsg">{{lang "panel_statistics_memory_no_memory"}}</div>{{end}}
 </div>
-<script>
-	let rawLabels = [{{range .Graph.Labels}}
-	{{.}},{{end}}
-	];
-	let seriesData = [{{range .Graph.Series}}[{{range .}}
-	{{.}},{{end}}
-	],{{end}}
-	];
-	let legendNames = [{{range .Graph.Legends}}
-	{{.}},{{end}}
-	];
-
-	(function(window, document, Chartist) {
-	'use strict';
-
-	Chartist.plugins = Chartist.plugins || {};
-	Chartist.plugins.byteUnits = function(options) {
-	options = Chartist.extend({}, {}, options);
-
-    return function byteUnits(chart) {
-    	if(!chart instanceof Chartist.Line) return;
-			
-		chart.on('created', function() {
-			console.log("running created")
-			const vbits = document.getElementsByClassName("ct-vertical");
-			if(vbits==null) return;
-
-			let tbits = [];
-			for(let i = 0; i < vbits.length; i++) {
-				tbits[i] = vbits[i].innerHTML;
-			}
-			console.log("tbits:",tbits);
-			
-			const calc = (places) => {
-				if(places==3) return;
-			
-				const matcher = vbits[0].innerHTML;
-				let allMatch = true;
-       			for(let i = 0; i < tbits.length; i++) {
-					let val = convertByteUnit(tbits[i], places);
-					if(val!=matcher) allMatch = false;
-					vbits[i].innerHTML = val;
-				}
-					
-				if(allMatch) calc(places + 1);
-			}
-			calc(0);
-       });
-    };
-  };
-
-}(window, document, Chartist));
-	const noPre = ["twelve-hours","one-day","two-days","one-week","one-month"];
-	const preStats = () => {
-		if((!"{{.TimeRange}}" in noPre) && seriesData.length > 0 && seriesData[0].length > 12) {
-			let elem = document.getElementsByClassName("colstack_graph_holder")[0];
-			let w = elem.clientWidth;
-			console.log("w:",w);
-			elem.classList.add("scrolly");
-			console.log("elem.clientWidth:",elem.clientWidth);
-			elem.setAttribute("style","width:"+w+"px;");
-			console.log("elem.clientWidth:",elem.clientWidth);
-		}
-	};
-	addInitHook("after_phrases", () => {
-		addInitHook("end_init", () => {
-			addInitHook("analytics_loaded", () => {
-				preStats();
-				buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}",legendNames,true);
-			});
-		});
-	});
-</script>
+{{template "panel_analytics_script_memory.html" . }}
