Add the cache capacities to the debug page.

--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -77,9 +77,9 @@
 	<div class="grid_item grid_stat grid_stat_head"><span>User Cache</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Reply Cache</span></div>
 
-	<div class="grid_item grid_stat"><span>{{.TCache}}</span></div>
-	<div class="grid_item grid_stat"><span>{{.UCache}}</span></div>
-	<div class="grid_item grid_stat"><span>{{.RCache}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.TCache}} / {{.TCap}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.UCache}} / {{.UCap}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.RCache}} / {{.RCap}}</span></div>
 
 
 	<div class="grid_item grid_stat grid_stat_head"><span>Topic List</span></div>
