--- a/templates/panel_analytics_time_range_month.html
+++ b/templates/panel_analytics_time_range_month.html
@@ -1,4 +1,4 @@
-<select form="timeRangeForm" class="timeRangeSelector to_right" name="timeRange">
+<select form="timeRangeForm" class="timeRangeSelector to_right autoSubmitRedirect" name="timeRange">
 	<option val="one-month"{{if eq .TimeRange "one-month"}} selected{{end}}>{{lang "panel_statistics_time_range_one_month"}}</option>
 	<option val="one-week"{{if eq .TimeRange "one-week"}} selected{{end}}>{{lang "panel_statistics_time_range_one_week"}}</option>
 	<option val="two-days"{{if eq .TimeRange "two-days"}} selected{{end}}>{{lang "panel_statistics_time_range_two_days"}}</option>
