Move SpammyDomainBits into common.go Fix the little UI issues from adding the adjacent select in the referrer pane. Add a few more spammy domain bits.

--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -344,7 +344,7 @@
     transform: translate(-100%) rotate(-45deg);
 	white-space: nowrap;
 }*/
-.timeRangeSelector {
+.analytics .colstack_head select {
 	margin-top: -5px;
 }
 .colstack_graph_holder + .rowlist {
