--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -23,7 +23,7 @@
 .analytics .colstack_head:first-child {
 	padding-bottom: 4px;
 }
-.timeRangeSelector {
+.analytics .colstack_head select {
 	padding: 2px;
 	margin-top: -3px;
 	margin-bottom: -3px;
