--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -129,6 +129,10 @@
 .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
     stroke: hsl(359,98%,43%) !important;
 }
+.ct-legend {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
 .spamSelector + .timeRangeSelector {
 	margin-left: 8px;
 }
