--- a/templates/panel_analytics_active_memory.html
+++ b/templates/panel_analytics_active_memory.html
@@ -1,6 +1,11 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem">
 		<h1>{{lang "panel_statistics_active_memory_head"}}</h1>
+		<select form="timeRangeForm" class="typeSelector to_right autoSubmitRedirect" name="mtype">
+			<option val="0"{{if eq .MemType 0}} selected{{end}}>{{lang "panel_statistics_memory_type_total"}}</option>
+			<option val="1"{{if eq .MemType 1}} selected{{end}}>{{lang "panel_statistics_memory_type_stack"}}</option>
+			<option val="2"{{if eq .MemType 2}} selected{{end}}>{{lang "panel_statistics_memory_type_heap"}}</option>
+		</select>
 		{{template "panel_analytics_time_range_month.html" . }}
 	</div>
 </div>
