--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -172,7 +172,7 @@ button, .formbutton, .panel_right_button:not(.has_inner_button), #panel_users .p
     color: rgb(200,200,200);
 }*/
 
-.spamSelector + .timeRangeSelector {
+select + .timeRangeSelector {
 	margin-left: 8px;
 }
 
