--- a/themes/shadow/public/panel.css
+++ b/themes/shadow/public/panel.css
@@ -133,7 +133,7 @@
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
-.spamSelector + .timeRangeSelector {
+select + .timeRangeSelector {
 	margin-left: 8px;
 }
 
