--- a/themes/tempra_simple/public/panel.css
+++ b/themes/tempra_simple/public/panel.css
@@ -177,7 +177,7 @@
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
-.spamSelector + .timeRangeSelector {
+select + .timeRangeSelector {
 	margin-left: 8px;
 }
 
